completed APis
