# lab01/server/api/openapi.yaml
@@ -145,6 +145,35 @@ paths:
           description: Task not found
           content: {}
       x-swagger-router-controller: Tasks
+    delete:
+      tags:
+      - tasks
+      summary: 'Remove assignee '
+      description: Remove the assignation of the task
+      operationId: removeAssignee
+      parameters:
+      - name: tid
+        in: path
+        description: Task id used to remove the assign from it
+        required: true
+        style: simple
+        explode: false
+        schema:
+          type: number
+      responses:
+        "200":
+          description: Successfully removed the assignation of that task
+          content: {}
+        "400":
+          description: Bad request
+          content: {}
+        "401":
+          description: Not authorized to delete the assignee
+          content: {}
+        "404":
+          description: Task not found
+          content: {}
+      x-swagger-router-controller: Tasks
   /tasks/{tid}/assignees/{uid}:
     post:
       tags:
@@ -186,43 +215,7 @@ paths:
           description: Task not found
           content: {}
       x-swagger-router-controller: Tasks
-    delete:
-      tags:
-      - tasks
-      summary: 'Remove assignee '
-      description: Remove the assignation of the task
-      operationId: removeAssignee
-      parameters:
-      - name: tid
-        in: path
-        description: Task id used to remove the assign from it
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: number
-      - name: uid
-        in: path
-        description: User id used to remove the assign from him
-        required: true
-        style: simple
-        explode: false
-        schema:
-          type: number
-      responses:
-        "200":
-          description: Successfully removed the assignation of that task
-          content: {}
-        "400":
-          description: Bad request
-          content: {}
-        "401":
-          description: Not authorized to delete the assignee
-          content: {}
-        "404":
-          description: Task not found
-          content: {}
-      x-swagger-router-controller: Tasks
+    
   /tasks/{id}:
     get:
       tags:
@@ -349,6 +342,21 @@ paths:
               schema:
                 $ref: '#/components/schemas/User'
       x-swagger-router-controller: Users
+  /assignees:
+    get:
+      tags:
+        - users
+      summary: Get the tasks assigned to the user logged
+      description: Get all the tasks that are assigned to the logged user
+      operationId: getAssignedTasks
+      responses:
+        "200":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                $ref: '#components/schemas/Tasks'
+      x-swagger-router-controller: Users 
 components:
   schemas:
     User:
@@ -419,10 +427,8 @@ components:
           type: string
           format: uri
         assignees:
-          type: array
-          items:
-            type: string
-            format: uri
+          type: string
+          format: uri
         self:
           type: string
           format: uri
