# lab01/server/service/UsersService.js
@@ -84,3 +84,18 @@ exports.logoutUser = function () {
   });
 }
 
+exports.getAssignedTasks = function (owner) {
+  return new Promise(function (resolve, reject) {
+    const sql = "SELECT t.id, t.description, t.important, t.private, t.project, t.deadline, t.completed, t.owner, t.assignedTo FROM tasks t, users u WHERE t.assignedTo = ? AND t.assignedTo = u.id";
+    db.all(sql, [owner], (err, rows) => {
+      console.log("rows:", rows);
+      if (err) reject(err);
+      else if (rows === undefined || rows.length === 0) reject(err);
+      else {
+        resolve(rows);
+      }
+    })
+
+  })
+}
+
